--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -89,7 +89,7 @@
         android:layout_height="60dp"
         android:layout_marginTop="42dp"
         android:backgroundTint="#2196F3"
-        android:onClick="addCount"
+        android:onClick="calculate"
         android:text="+"
         android:textAllCaps="false"
         android:textSize="24sp"
@@ -104,7 +104,7 @@
         android:layout_height="60dp"
         android:layout_marginTop="32dp"
         android:backgroundTint="#2196F3"
-        android:onClick="subCount"
+        android:onClick="calculate"
         android:text="-"
         android:textAllCaps="false"
         android:textSize="24sp"
@@ -119,7 +119,7 @@
         android:layout_height="60dp"
         android:layout_marginTop="32dp"
         android:backgroundTint="#2196F3"
-        android:onClick="mulCount"
+        android:onClick="calculate"
         android:text="×"
         android:textAllCaps="false"
         android:textSize="24sp"
@@ -134,7 +134,7 @@
         android:layout_height="60dp"
         android:layout_marginTop="32dp"
         android:backgroundTint="#2196F3"
-        android:onClick="divCount"
+        android:onClick="calculate"
         android:text="÷"
         android:textAllCaps="false"
         android:textSize="24sp"
