--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -90,6 +90,7 @@
         android:layout_marginTop="42dp"
         android:backgroundTint="#2196F3"
         android:onClick="calculate"
+        android:tag="Add"
         android:text="+"
         android:textAllCaps="false"
         android:textSize="24sp"
@@ -105,6 +106,7 @@
         android:layout_marginTop="32dp"
         android:backgroundTint="#2196F3"
         android:onClick="calculate"
+        android:tag="Sub"
         android:text="-"
         android:textAllCaps="false"
         android:textSize="24sp"
@@ -120,6 +122,7 @@
         android:layout_marginTop="32dp"
         android:backgroundTint="#2196F3"
         android:onClick="calculate"
+        android:tag="Mul"
         android:text="×"
         android:textAllCaps="false"
         android:textSize="24sp"
@@ -135,6 +138,7 @@
         android:layout_marginTop="32dp"
         android:backgroundTint="#2196F3"
         android:onClick="calculate"
+        android:tag="Div"
         android:text="÷"
         android:textAllCaps="false"
         android:textSize="24sp"
